<resources>
    <string name="app_name">SwanNavigation</string>
    <string name="login">Login</string>

    <string name="sign_up">Sign Up</string>
    <string name="title_location_permission" />
    <string name="text_location_permission" />
    <string name="ok" />
    <string name="new_location">New lat: %1$s New longitude: %2$s</string>
    <string name="access_token">pk.eyJ1IjoiY2lhcmFuMjUwOSIsImEiOiJjazhmNWlubHkwMG8wM25zOTZuczNqdDVxIn0.EXGZuA_6iee0YrLSojZaWA</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="password">Password</string>
    <string name="email_address">Email Address</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="user_location_permission_explanation" />
    <string name="user_location_permission_not_granted" />
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Measurement</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Units of Measurement</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>

    <string name="unitsofM">metric</string>
    <string name="recorded_trips">Recorded Trips</string>
    <string name="date">Date:</string>
    <string name="from">From:</string>
    <string name="to">To:</string>
    <string name="units_of_measurement">Units Of Measurement</string>
    <string name="metric">Metric</string>
    <string name="imperial">Imperial</string>
    <string name="settings">Settings</string>
    <string name="preferred_mode_of_transport">Preferred Transport</string>

    <string name="public_transport">Public Transport</string>
    <string name="walking">Walking</string>
    <string name="driving">Driving</string>
    <string name="cycling">cycling</string>


    <string-array name="units_array">
        <item>Metric</item>
        <item>Imperial</item>
    </string-array>

</resources>
